tests/ui/generator/clone-impl-static.stderr
error[E0277]: the trait bound `[static generator@$DIR/clone-impl-static.rs:7:15: 7:29]: Copy` is not satisfied
  --> $DIR/clone-impl-static.rs:10:16
   |
LL |     check_copy(&gen);
   |     ---------- ^^^^ the trait `Copy` is not implemented for `[static generator@$DIR/clone-impl-static.rs:7:15: 7:29]`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `check_copy`
  --> $DIR/clone-impl-static.rs:16:18
   |
LL | fn check_copy<T: Copy>(_x: &T) {}
   |                  ^^^^ required by this bound in `check_copy`

error[E0277]: the trait bound `[static generator@$DIR/clone-impl-static.rs:7:15: 7:29]: Clone` is not satisfied
  --> $DIR/clone-impl-static.rs:12:17
   |
LL |     check_clone(&gen);
   |     ----------- ^^^^ the trait `Clone` is not implemented for `[static generator@$DIR/clone-impl-static.rs:7:15: 7:29]`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `check_clone`
  --> $DIR/clone-impl-static.rs:17:19
   |
LL | fn check_clone<T: Clone>(_x: &T) {}
   |                   ^^^^^ required by this bound in `check_clone`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
